
[package]
name = "solanaroll"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program", "spl-token/program", "spl-token/no-entrypoint"]
default = ["solana-sdk/default"]

# [dev-dependencies]
# solana-sdk = "1.3.13"

[dependencies]
num-derive = "0.3"
thiserror = "1.0"
num-traits = "0.2"
solana-program = "1.4.5"
bytemuck = "1.4.0"
solana-sdk = { version = "1.4.5", default-features = false, optional = true }
spl-token = { version = "2.0.6", default-features = false }
byteorder = "1.3"

[lib]
name = "solana_bpf_helloworld"
crate-type = ["cdylib", "lib"]
